puree-tests/src/test/resources/neg/UnusedNil.scala
object UnusedNil {
  def f(): Int = {
    Nil
    1
  }
}
